2006-02-03  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSWorkspace.m: In GSLaunched() be more defensive and don't
	assume that the values which should be present in the notification
	userinfo dictionry really are there.
	* Source/NSApplication.m: Code more defensively setting up
	notification info.
	* Source/GSServicesManager.m: Improve handling of incoming messages,
	prohibit remote processes from calling private methods.
	* Source/NSWindow.m:
	* Source/NSWindowController.m:
	* Source/NSDataLinkManager.m:
	* Source/NSTextView.m:
	* Source/NSDocumentController.m:
	* Source/NSDataLink.m:
	* Source/NSView.m:
	* Source/NSDocument.m:
	Revert harmless but stupid changes made last night when I was too
	tired.

2006-02-02  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSWorkspace.m: remove an app from list of launched apps if
	we can't contact it.
	* Source/NSApplication.m: ([hideOtherApplications:]) implemented.
	([unhideAllApplications:]) implemented.
	Send did hide and did unhide notifications to the workspace center
	so the workspace manager knows about them.
	Honor the NSWindow-canHide method when deactivating apps.
	* Source/NSWindow.m: Fix accessor methods which return a BOOL to
	do the right thing when they are accessing a bit in a bitfield.
	* Source/NSWindowController.m: ditto
	* Source/NSDataLinkManager.m: ditto
	* Source/NSTextView.m: ditto
	* Source/NSDocumentController.m: ditto
	* Source/NSDataLink.m: ditto
	* Source/NSView.m: ditto
	* Source/NSDocument.m: ditto
	Are these changes nneded?  The compiler seemed to be casting bitfield
	values to char as  things other than 1 or 0 ... but I was tired when
	looking at this and it seems unlikely.

2006-02-01  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSApplication.m: Send activation/deactivation notifications
	to workspace center too ... so workspace manager will know about it.
	* Source/NSWorkspace.m: Change internal method to launch applications